# c-utils

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  collections.c  collections.h
tests/: CMakeLists.txt  test_collections.cpp  test_collections.h
